# gravityvit

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_SUMMARY.MD  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: config.yaml
configs/data/: gravityspy.yaml
configs/model/: baseline_cnn.yaml  multiview_vit.yaml  vit.yaml
configs/train/: default.yaml
notebooks/: 01_data_exploration.py
scripts/: download_data.py  evaluate.py  setup_mlflow.py  setup_wandb.py  train.py
src/: utils.py
src/analysis/: __init__.py  analyzer.py  visualization.py
src/data/: __init__.py  dataloader.py  dataset.py  transforms.py
src/training/: __init__.py  losses.py  metrics.py  trainer.py
tests/: test_analysis.py  test_dataset.py  test_losses.py  test_metrics.py  test_trainer.py
